--- a/WebApiAutores/appsettings.Development.json
+++ b/WebApiAutores/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "WebApiAutores": "Warning",
+      "WebApiAutores": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
